--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
-    "@fontsource/poppins": "^4.5.10"
+    "@fontsource/poppins": "^4.5.10",
+    "boxicons": "^2.1.4"
   }
 }
