--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/scroll-into-view": "^1.16.0",
+    "@types/scrollreveal": "^0.0.8",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
@@ -18,6 +19,7 @@
     "@fontsource/poppins": "^4.5.10",
     "boxicons": "^2.1.4",
     "scroll-into-view": "^1.16.2",
+    "scrollreveal": "^4.0.9",
     "typed.js": "^2.0.12"
   }
 }
